# template-for-vala-apps

./: .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CMakeLists.txt  INSTALL  README.md  alvane  artisan  meson.build
data/: com.github.alvane.appdata.xml.in  com.github.alvane.desktop.in  com.github.alvane.gresource.xml  com.github.alvane.gschema.xml  com.github.robertsanseries.template-for-vala-apps.appdata.xml  com.github.robertsanseries.template-for-vala-apps.desktop  com.github.robertsanseries.template-for-vala-apps.gresource.xml  hello.desktop  io.github.alvane.appdata.xml.in  io.github.alvane.desktop.in  io.github.alvane.gresource.xml  io.github.alvane.gschema.xml  io.github.elementary.appdata.xml.in  io.github.elementary.desktop.in  io.github.elementary.gresource.xml  io.github.elementary.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
po/: LINGUAS  com.github.alvane.pot  com.github.robertsanseries.template-for-vala-apps.pot  fr.po  io.github.alvane.pot  (+1 more)
src/: Application.vala  Hello  Hello.vala  Main.vala  Window.vala  meson.build
src/Controllers/: Hello.vala
src/Core/: Build.vala  Constants.vala
src/Models/: Hello.vala
src/Utils/: Utils.vala
src/Views/: MainWindow.vala
src/configs/: Constants.vala  Properties.vala  Settings.vala
src/controllers/: AppController.vala
src/enums/: AppEnum.vala
src/models/: AppModel.vala
src/objects/: AppObject.vala
src/utils/: FileUtil.vala  StringUtil.vala  TimeUtil.vala  URLUtil.vala  WidgetUtil.vala
src/views/: AppView.vala
src/widgets/: DialogPreferences.vala  HeaderBar.vala
(+1 files in other folders)
