sources = files(
    'configs/Constants.vala',
    'configs/Properties.vala',
    'configs/Settings.vala',
    
    'controllers/AppController.vala',

    'enums/AppEnum.vala',

    'models/AppModel.vala',

    'objects/AppObject.vala',

    'utils/FileUtil.vala',
    'utils/StringUtil.vala',
    'utils/TimeUtil.vala',
    'utils/URLUtil.vala',
    'utils/WidgetUtil.vala',
    
    'views/AppView.vala',

    'widgets/DialogPreferences.vala',
    'widgets/HeaderBar.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)